# astro-lab

./: LICENSE  PIPELINE_COMPLETION_SUMMARY.md  README.md  alerts.json  pyproject.toml
data/: DATA_PIPELINE_GUIDE.md  README.md
examples/: preprocess_and_combine_surveys.py  train_gaia_real_data.py  use_astrolab_catalog.py
scripts/: complete_data_pipeline.py  generate_sample_data.py  process_gaia_data.py
src/astro_lab/: __init__.py  config.py  config_validator.py
src/astro_lab/cli/: config.py  hpo.py
src/astro_lab/data/analysis/: structures.py
src/astro_lab/data/collectors/: base.py  des.py
src/astro_lab/data/dataset/: astrolab.py
src/astro_lab/data/preprocessors/: astro.py  exoplanet.py  gaia.py
src/astro_lab/data/samplers/: base.py  cluster.py
src/astro_lab/models/: __init__.py
src/astro_lab/models/layers/: base.py  convolution.py  point_cloud.py  pooling.py
src/astro_lab/models/layers/decoders/: temporal_decoder.py
src/astro_lab/models/layers/encoders/: temporal_encoder.py
src/astro_lab/tensors/: base.py  cosmology.py  crossmatch.py  image.py  lightcurve.py  mixins.py  orbital.py  simulation.py  survey.py
src/astro_lab/tensors/spatial/: __init__.py  spatial_tensordict.py
src/astro_lab/training/: batch_processing_mixin.py  memory_efficient_mixin.py  train.py
src/astro_lab/ui/: dashboard.py
src/astro_lab/ui/components/: __init__.py  config.py  cosmic_web_analyzer.py  state.py  survey_manager.py  trainer.py  training_config.py  training_manager.py
src/astro_lab/ui/components/visualizer/: __init__.py  base.py  blender_viz.py  cosmograph_viz.py  plotly_viz.py  pyvista_viz.py
src/astro_lab/ui/pages/: analysis.py  config.py  cosmic_web_page.py  data_page.py  training.py  training_page.py  visualization.py
src/astro_lab/utils/: device.py  tensor.py
src/astro_lab/widgets/: __init__.py  albpy_bridge.py  cosmograph_bridge.py  plotly_bridge.py
src/astro_lab/widgets/albpy/: __init__.py
src/astro_lab/widgets/albpy/operators/: astronomical.py  comparison_plot.py  galaxy.py  grease_pencil_2d.py  planet.py  point.py  radar_chart.py  star.py
src/astro_lab/widgets/albpy/utilities/: __init__.py  astronomical_data.py  physics_utilities.py  (+1 more)
src/astro_lab/widgets/alcg/: __init__.py
src/astro_lab/widgets/alpv/: tensor_bridge.py
src/astro_lab/widgets/enhanced/: backend_converters.py  tensor_bridge.py
src/astro_lab/widgets/examples/: unified_pipeline_example.py
test/: conftest.py  test_catalog_scripts.py  test_config_integration.py  test_data.py  test_data_pipeline.py  test_integration.py  test_models.py  test_performance_optimizations.py  test_samplers.py  test_training.py  test_training_integration.py
(+30 files in other folders)
